[web-src] Add spacing in touch top menu to fix scrolling issue in iOS

--- a/web-src/src/mystyles.css
+++ b/web-src/src/mystyles.css
@@ -227,6 +227,13 @@ section.fd-tabs-section + section.fd-content {
   background-color: hsl(0, 0%, 96%)
 }
 
+.navbar-item .fd-navbar-item-level2 {
+  padding-left: 1.5rem;
+}
+hr.fd-navbar-divider {
+  margin: 12px 0;
+}
+
 /* Show scrollbar for navbar menu in desktop mode if content exceeds the screen size */
 @media only screen and (min-width: 1024px) {
   .navbar-dropdown {
